--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
-Ekene Okoli <khennyphresh@gmail.com>
-Okpara Onyedikachi <dikachi015safety@gmail.com>
+Joann Vuong <130@holbertonschool.com>
+Joaquin Pintaluba <jopintaluba@gmail.com>
+Federico Blengio <fedeeblengio@gmail.com>
+Ronald Rivero <ralexrivero@gmail.com>
